docs(readme): fix README, force breaking change
BREAKING CHANGE: The refactoring (a previous commit) was intended to reflect a breaking change...
doing that now.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -39,6 +39,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "drero",
+      "name": "Albranco",
+      "avatar_url": "https://avatars.githubusercontent.com/u/42916864?v=4",
+      "profile": "https://www.soindaial.com.br/",
+      "contributions": [
+        "ideas"
+      ]
     }
   ]
 }
