--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "dependencies": {
     "immer": "^9.0.7",
     "prop-types": "^15.8.0",
-    "styled-components": "^5.3.3"
+    "styled-components": ">=5.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.7",
@@ -88,11 +88,11 @@
     "@typescript-eslint/parser": "^5.8.1",
     "all-contributors-cli": "^6.20.0",
     "commitizen": "^4.2.4",
-    "eslint": "^8.5.0",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -100,7 +100,7 @@
     "husky": "^7.0.0",
     "is-ci": "^3.0.1",
     "jest": "^27.4.5",
-    "lint-staged": "^12.1.3",
+    "lint-staged": "^12.1.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "react": "^17.0.2",
