--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jaredreisinger/react-crossword",
-  "homepage": "http://JaredReisinger.github.io/react-crossword",
+  "homepage": "https://react-crossword.jaredreisinger.com",
   "version": "4.0.1",
   "description": "A flexible, responsive, and easy-to-use crossword component for React apps",
   "author": {
