--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clean": "rimraf build coverage dist styleguide",
     "doc:dev": "styleguidist server",
     "doc:build": "styleguidist build",
-    "doc:deploy": "npm run doc:build && gh-pages --dist styleguide",
+    "doc:deploy": "npm run doc:build && gh-pages --dist styleguide --branch documentation",
     "#snyk-protect": "snyk protect",
     "#prepare": "npm run snyk-protect",
     "prepare": "is-ci || husky install"
