--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
       - run: npm run build
 
       - if: ${{ github.event_name == 'push' && startsWith(matrix.node-version, '14.') }}
+        name: Publish code coverage
         uses: codecov/codecov-action@v2
         # with:
         #   verbose: true
@@ -43,6 +44,7 @@ jobs:
         run: npx semantic-release
 
       - if: ${{ github.event_name == 'push' && github.ref_name == 'main' && startsWith(matrix.node-version, '14.') }}
+        name: Publish styleguide
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
