--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -7,7 +7,7 @@
     "README.md"
   ],
   "imageSize": 100,
-  "badgeTemplate": "[![contributors](https://img.shields.io/badge/contributors-<%= contributors.length %>-orange.svg)](#contributors)",
+  "badgeTemplate": "[![contributors](https://img.shields.io/badge/contributors-<%= contributors.length %>-orange.svg)](#contributors-)",
   "commit": true,
   "skipCi": true,
   "commitConvention": "angular",
