--- a/example/package.json
+++ b/example/package.json
@@ -14,15 +14,15 @@
     "immer": "file:../node_modules/immer",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "5.0.0",
     "styled-components": "file:../node_modules/styled-components"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.5",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.4"
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "file:../node_modules/@types/react",
+    "@types/react-dom": "file:../node_modules/@types/react-dom",
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.5.5"
   },
   "eslintConfig": {
     "extends": "react-app"
