--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8,7 +8,7 @@
   ],
   "imageSize": 100,
   "badgeTemplate": "[![contributors](https://img.shields.io/badge/contributors-<%= contributors.length %>-orange.svg)](#contributors-)",
-  "commit": true,
+  "commit": false,
   "skipCi": true,
   "commitConvention": "angular",
   "contributorsPerLine": 7,
@@ -54,6 +54,15 @@
       "name": "Rob McCollough",
       "avatar_url": "https://avatars.githubusercontent.com/u/42196611?v=4",
       "profile": "https://www.robmccollough.dev/",
+      "contributions": [
+        "ideas"
+      ]
+    },
+    {
+      "login": "lorddaedra",
+      "name": "lorddaedra",
+      "avatar_url": "https://avatars.githubusercontent.com/u/26400787?v=4",
+      "profile": "https://github.com/lorddaedra",
       "contributions": [
         "ideas"
       ]
