build(eslint): enable react hook rules

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -5,6 +5,7 @@ extends:
   - airbnb
   - plugin:react/recommended
   - plugin:react/jsx-runtime
+  - plugin:react-hooks/recommended
   - plugin:@typescript-eslint/recommended
   - prettier
 
