feat: add per-answer "complete" and "incomplete" callbacks, and tweak crossword-level
To supplement the existing `onCorrect` callback, new `onAnswerComplete`, `onAnswerCorrect` and
`onAnswerIncorrect` callbacks have been added.  (`onAnswerCorrect` is 100% the same as `onCorrect`;
I'm changing the name for clarity, and will deprecate `onCorrect` in the future.)  Also, a
crossword-level `onCrosswordComplete` has been added.

fix #131

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -66,6 +66,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "HuHguZ",
+      "name": "Ilya Lukyanov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/32592443?v=4",
+      "profile": "https://github.com/HuHguZ",
+      "contributions": [
+        "ideas"
+      ]
     }
   ]
 }
