--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     ]
   },
   "dependencies": {
-    "immer": "^9.0.12",
+    "immer": "^9.0.15",
     "prop-types": "^15.8.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
@@ -123,8 +123,8 @@
     "webpack": "^5.70.0"
   },
   "peerDependencies": {
-    "react": ">=17.0.2",
-    "react-dom": ">=17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "snyk": true
 }
