--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -91,7 +91,7 @@ rules:
   #   - extensions: [.js, .jsx]
   # react/sort-comp: off
 overrides:
-  - files: ['*.test.*']
+  - files: ['**/__test__/**', '*.test.*']
     rules:
       import/no-extraneous-dependencies: off # allow imports from dev dependencies!
       '@typescript-eslint/ban-ts-comment': off
