--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -75,6 +75,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "rhoffmann",
+      "name": "Richard Hoffmann",
+      "avatar_url": "https://avatars.githubusercontent.com/u/678772?v=4",
+      "profile": "https://github.com/rhoffmann",
+      "contributions": [
+        "ideas"
+      ]
     }
   ]
 }
