--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -84,6 +84,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "gitname",
+      "name": "gitname",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7143133?v=4",
+      "profile": "https://github.com/gitname",
+      "contributions": [
+        "bug"
+      ]
     }
   ]
 }
