--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -93,6 +93,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "AncientSwordRage",
+      "name": "Craig",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5961746?v=4",
+      "profile": "https://github.com/AncientSwordRage",
+      "contributions": [
+        "ideas"
+      ]
     }
   ]
 }
